# matrix2videoflow

./: .gitignore  docker-compose.yml  main.py
core/: __init__.py  node_graph.py  types.py  video_processor.py
tauri-ui/: .dockerignore  Dockerfile  README.md  index.html  package.json  vite.config.ts
tauri-ui/src/: App.tsx  styles.css
tauri-ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/: __init__.py  components.py
